# cat-rocket-converter

./: BUILD_PLAN.md  CLAUDE.md  README.md  SESSION_NOTES.md  index.html  jsconfig.json  package-lock.json  package.json  pradinis_prompt_for_planning  vite.config.js  wdio.conf.js
src/: App.svelte  app.css  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  converter.rs  file_utils.rs  lib.rs  main.rs
src/lib/: tauri.js
src/pages/: Page1Drop.svelte  Page2Format.svelte  Page3Quality.svelte  Page4Resize.svelte  Page5Rename.svelte  Page6Save.svelte
src/stores/: wizard.js
tests/e2e/: pixshrink.e2e.js  run.mjs
