[package]
name = "pixshrink"
version = "0.1.0"
edition = "2021"

[lib]
name = "pixshrink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
mozjpeg = "0.10"
rayon = "1.10"
regex = "1.11"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2.0.0"
tempfile = "3.13"
webp = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
